--- a/public/index.html
+++ b/public/index.html
@@ -54,11 +54,13 @@
     </section>
 
     <section id="services">
-        <div class="container">
+        <div class="container-fluid">
             <center><h1><span>SERVICES</span></h1></center>
             <div class="row secondContent">
                 <div class="col-xs-12 col-sm-6 col-md-4 cards">
-                    <img src="img/handshake.svg" alt="handshake-icon" class="svgIcon">
+                    <div class="svg">
+                        <img src="img/handshake.svg" alt="handshake-icon" class="svgIcon">
+                    </div>
                     <h2>BUSINESS SETUP</h2>
                     <P>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nisi debitis, in est unde aliquid nam vitae!</P>
                     <div>
@@ -66,7 +68,9 @@
                     </div>
                 </div>
                 <div class="col-xs-12 col-sm-6 col-md-4 cards">
-                    <img src="img/bank.svg" alt="wallet-icon" class="svgIcon">
+                    <div class="svg">
+                        <img src="img/bank.svg" alt="wallet-icon" class="svgIcon">
+                    </div>
                     <h2>BANKING</h2>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nisi debitis, in est unde aliquid nam vitae!</p>
                     <div>
@@ -74,7 +78,9 @@
                     </div>
                 </div>
                 <div class="col-xs-12 col-sm-6 col-md-4 cards">
-                    <img src="img/wallet.svg" alt="wallet-icon" class="svgIcon">
+                    <div class="svg">
+                        <img src="img/wallet.svg" alt="wallet-icon" class="svgIcon">
+                    </div>
                     <h2>INSURANCE</h2>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nisi debitis, in est unde aliquid nam vitae!</p>
                     <div>
